rust/test/dt/fundamental_data_type/dynamic/too_many_params.stderr
error: Parametrized element should be single, because Single has only one element
       Single : < T1, T2 > ;
 --> ../../../rust/test/dt/fundamental_data_type/dynamic/too_many_params.rs:5:1
  |
5 | / single!
6 | | {
7 | |   Single : < T1, T2 >;
8 | | }
  | |_^
  |
  = note: this error originates in the macro `single` (in Nightly builds, run with -Z macro-backtrace for more info)
